--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=postgres
 spring.jpa.open-in-view=false
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
 jwt.token.secret=jwtappdemo
 jwt.token.expired=3600000
