fixed bugs depends with ReqArgsConstructor annotations

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,5 +1,5 @@
 server.port=8088
-spring.datasource.url=jdbc:postgresql://localhost:5432/filmolikeresttest
+spring.datasource.url=jdbc:postgresql://localhost:5432/flrt
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
